--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-acker/certs/*
+packer/certs/*
 packer/manifests/*
 
 cert-tool/terraform.tfstate
 
 terraform/terraform.tfvars
 terraform/terraform.tfstate*
+terraform/.terraform/*
