Include empty folders in git

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-packer/certs/*
-packer/manifests/*
-
-cert-tool/terraform.tfstate
+cert-tool/terraform.tfstate*
 
 terraform/terraform.tfvars
 terraform/terraform.tfstate*
-terraform/.terraform/*
+terraform/.terraform
