Geth nodes connect via boot nodes

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@ cert-tool/terraform.tfstate*
 terraform/amis.auto.tfvars.json
 terraform/terraform.tfvars
 terraform/terraform.tfstate*
-terraform/.terraform
+terraform/.terraform*
