Set autorestart to unexpected for quorum and bootnodes

--- a/packer/configs/bootnode-supervisor.conf
+++ b/packer/configs/bootnode-supervisor.conf
@@ -4,5 +4,5 @@ stdout_logfile=/opt/quorum/log/bootnode-stdout.log
 stderr_logfile=/opt/quorum/log/bootnode-error.log
 numprocs=1
 autostart=true
-autorestart=true
+autorestart=unexpected
 stopsignal=INT
