Fix styles and output
Fix styles and output

--- a/.gitignore
+++ b/.gitignore
@@ -8,46 +8,5 @@ terraform/cert-tool/terraform.tfstate*
 terraform/cert-tool/.terraform*
 
 .vscode/
-terraform/eu-west-2-BackupLambda.zip
-terraform/eu-west-1-BackupLambda.zip
-terraform/eu-central-1-BackupLambda.zip
-terraform/ca-central-1-BackupLambda.zip
-terraform/ap-southeast-2-BackupLambda.zip
-terraform/ap-southeast-1-BackupLambda.zip
-terraform/ap-south-1-BackupLambda.zip
-terraform/ap-northeast-2-BackupLambda.zip
-terraform/ap-northeast-1-BackupLambda.zip
-terraform/sa-east-1-BackupLambda.zip
-terraform/us-east-1-BackupLambda.zip
-terraform/us-east-2-BackupLambda.zip
-terraform/us-west-1-BackupLambda.zip
-terraform/us-west-2-BackupLambda.zip
-terraform/ap-northeast-1/BackupLambda
-terraform/ap-northeast-2/BackupLambda
-terraform/ap-south-1/BackupLambda
-terraform/ap-southeast-1/BackupLambda
-terraform/ap-southeast-2/BackupLambda
-terraform/ca-central-1/BackupLambda
-terraform/enc_ssh-ap-northeast-1
-terraform/enc_ssh-ap-northeast-2
-terraform/enc_ssh-ap-south-1
-terraform/enc_ssh-ap-southeast-1
-terraform/enc_ssh-ap-southeast-2
-terraform/enc_ssh-ca-central-1
-terraform/enc_ssh-eu-central-1
-terraform/enc_ssh-eu-west-1
-terraform/enc_ssh-eu-west-2
-terraform/enc_ssh-sa-east-1
-terraform/enc_ssh-us-east-1
-terraform/enc_ssh-us-east-2
-terraform/enc_ssh-us-west-1
-terraform/enc_ssh-us-west-2
-terraform/eu-central-1/BackupLambda
-terraform/eu-west-1/BackupLambda
-terraform/eu-west-2/BackupLambda
-terraform/sa-east-1/BackupLambda
-terraform/us-east-1/BackupLambda
-terraform/us-east-2/BackupLambda
-terraform/us-west-1/BackupLambda
-terraform/us-west-2/BackupLambda
+terraform/temp/*
 workingterraformvars.txt
