Set bootnode verbosity to 9

--- a/packer/configs/bootnode-supervisor.conf
+++ b/packer/configs/bootnode-supervisor.conf
@@ -1,5 +1,5 @@
 [program:bootnode]
-command=bootnode --nodekey=/opt/quorum/private/boot.key
+command=bootnode --nodekey=/opt/quorum/private/boot.key --verbosity=9
 stdout_logfile=/opt/quorum/log/bootnode-stdout.log
 stderr_logfile=/opt/quorum/log/bootnode-error.log
 numprocs=1
